[project]
name = "packaging_tutorial"
version = "0.0.1"
authors = [
  { name="vicrobot", email="chaosplusorder@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vicrobot/packaging_tutorial"
Issues = "https://github.com/vicrobot/packaging_tutorial/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bhakt"]
